--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header">
       <a href="#" class="page-header__logo logo">Estate</a>
-      <nav id="nav" class="page-header__nav nav">
+      <nav id="nav" class="page-header__nav nav open">
         <ul class="nav__list nav__list-mob-active">
           <li class=" nav__select nav__list-item ">
             <a class="nav__list-item--link" href="#">Недвижимость</a>
