--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <header class="page-header">
       <a href="#" class="page-header__logo logo">Estate</a>
-      <nav id="nav" class="page-header__nav nav open">
+      <nav id="nav" class="page-header__nav nav">
         <ul class="nav__list nav__list-mob-active">
           <li class=" nav__select nav__list-item ">
             <a class="nav__list-item--link" href="#">Недвижимость</a>
             <div class="nav__list-item--select"></div>
-            <div id='menu'>
-              <select id='select' class="nav__select-list">
+            <div id="menu">
+              <select id="select" class="nav__select-list">
                 <option value="list1" class="nav__select-item">Жилая</option>
                 <option value="list2" class="nav__select-item">
                   Коммерческая
@@ -39,7 +39,7 @@
             <a class="nav__list-item--link" href="#">О компании</a>
           </li>
         </ul>
-        <ul id="nav-social" class="nav__social-list nav-social ">
+        <ul id="nav-social" class="nav__social-list nav-social  ">
           <li class="nav-social__item--telegram">
             <a class="nav-social__item--link" href="http://telegram.org"></a>
           </li>
