--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <a href="#" class="page-header__logo logo">Estate</a>
       <nav id="nav" class="page-header__nav nav">
-        <ul class="nav__list nav__list-mob-active">
+        <ul id='nav-list' class="nav__list nav__list-mob-active open">
           <li class=" nav__select nav__list-item ">
             <a class="nav__list-item--link" href="#">Недвижимость</a>
             <div class="nav__list-item--select"></div>
