mob убран select, добавлен ul

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <header class="page-header">
       <a href="#" class="page-header__logo logo">Estate</a>
       <nav id="nav" class="page-header__nav nav">
-        <ul id='nav-list' class="nav__list nav__list-mob-active open">
+        <ul id="nav-list" class="nav__list nav__list-mob-active open">
           <li class=" nav__select nav__list-item ">
             <a class="nav__list-item--link" href="#">Недвижимость</a>
-            <div class="nav__list-item--select"></div>
-            <div id="menu">
+            <div class="nav__list-item--select">
               <select id="select" class="nav__select-list">
                 <option value="list1" class="nav__select-item">Жилая</option>
                 <option value="list2" class="nav__select-item">
@@ -28,6 +27,12 @@
                 </option>
               </select>
             </div>
+            <ul id="mob-select" class="mob-select">
+              <li class="mob-select__item">Жилая</li>
+              <li class="mob-select__item">Коммерческая</li>
+              <li class="mob-select__item">Инвестиционная</li>
+              <li class="mob-select__item">Эксклюзивная</li>
+            </ul>
           </li>
           <li class="nav__list-item">
             <a class="nav__list-item--link" href="#">Услуги</a>
